--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "mdao",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.0.1"
+    "mongodb": "^3.0.1",
+    "mongoose": "^5.0.2"
   }
 }
