--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "express": "^4.16.2",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.2"
+  },
+  "devDependencies": {
+    "expect": "^22.1.0",
+    "mocha": "^5.0.0",
+    "supertest": "^3.0.0"
   }
 }
