--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.2",
